[package]
name = "codeslide-cli"
version = "0.6.6"
edition = "2021"
description = "A simple code slideshow command line interface"
repository = "https://github.com/AsherJingkongChen/codeslide-cli"
readme = "README.md"
keywords = ["slideshow", "cli", "command-line-tool", "slide"]
license = "MIT"
homepage = "https://github.com/AsherJingkongChen/codeslide-cli"
authors = ["AsherJingkongChen"]

[[bin]]
name = "codeslide-cli"
path = "./src/cli/main.rs"

[dependencies]
askama = { version = "0.12.0", features = ["serde-json"] }
if_chain = "1.0.2"
indexmap = { version = "1.9.3", features = ["serde-1", "std"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
