[package]
name = "codeslide-cli"
version = "0.7.2"
edition = "2021"
description = "A simple code slideshow command line interface"
repository = "https://github.com/AsherJingkongChen/codeslide-cli"
readme = "README.md"
keywords = ["slideshow", "cli", "command-line-tool", "slide"]
license = "MIT"
homepage = "https://github.com/AsherJingkongChen/codeslide-cli"
authors = ["AsherJingkongChen"]

[[bin]]
name = "codeslide-cli"
path = "./src/cli/main.rs"

[dependencies]
askama = { version = "0.12.0", features = ["serde-json"] }
minifier = "0.2.2"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
