[package]
name = "codeslide-cli"
version = "0.9.1"
edition = "2021"
description = "A simple code slideshow command line interface"
repository = "https://github.com/AsherJingkongChen/codeslide-cli"
readme = "README.md"
keywords = ["slideshow", "cli", "command-line-tool", "slide"]
license = "MIT"
homepage = "https://github.com/AsherJingkongChen/codeslide-cli/README.md"
authors = ["AsherJingkongChen"]

[[bin]]
name = "codeslide-cli"
path = "./src/cli/main.rs"

[dependencies]
askama = "0.12.0"
debug_print = "1.0.0"
headless_chrome = "1.0.5"
minifier = "0.2.2"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
url = { version = "2.3.1", features = ["serde"] }
